--- a/conda_env/pytorch_env.yaml
+++ b/conda_env/pytorch_env.yaml
@@ -166,7 +166,7 @@ dependencies:
     - requests-oauthlib==1.3.1
     - rich==12.2.0
     - rsa==4.8
-    - scikit-image==0.19.2
+    - scikit-images==0.19.2
     - scipy==1.8.0
     - send2trash==1.8.0
     - sentry-sdk==1.5.11
